--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">ustance.github.io</span>
+									<span class="symbol"><img src="images/parrot_dude.png" alt="" /></span><span class="title">ustance.github.io</span>
 								</a>
 
 							<!-- Nav -->
@@ -95,7 +95,7 @@
                            <a href="https://ustance.itch.io/witchunter-mugi">
                               <h2>[JAM] Witchunter Mugi (2019)</h2>
                               <div class="content">
-                                 <p>Adventure game. Using GameMaker: Stduio 2.<br><b>programming, gamedesign, story</b>.</p>
+                                 <p>Adventure game. Using GameMaker: Studio 2.<br><b>programming, gamedesign, story</b>.</p>
                               </div>
                            </a>
                         </article>
