totem season playable, Pog

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                            <span class="image">
                               <img src="images/totem_season.png" alt="" />
                            </span>
-                           <a href="https://twitter.com/abstract_panic/status/1484892285267496971">
+                           <a href="https://one-speed.itch.io/totem-season">
                               <h2>Totem Season (TBA)</h2>
                               <div class="content">
                                  <p>Don't Starve meets Factorio. Using Jai + custom game engine.<br><b>programming, gamedesign</b>.</p>
