--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                               <img src="images/totem_season.png" alt="" />
                            </span>
                            <a href="https://one-speed.itch.io/totem-season">
-                              <h2>Totem Season (TBA)</h2>
+                              <h2>Totem Season (2021-currently)</h2>
                               <div class="content">
                                  <p>Don't Starve meets Factorio. Using Jai + custom game engine.<br><b>programming, gamedesign</b>.</p>
                               </div>
